--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ python = "^3.10"
 click = "^8.1.3"
 requests = "^2.28.1"
 beautifulsoup4 = "^4.11.1"
+google = "^3.0.0"
+google-api-python-client = "^2.65.0"
+google-auth-oauthlib = "^0.5.3"
 
 
 [build-system]
