--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+credentials.json
+token.pickle
+src/mathsense_gcal_import/config.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
