Add run.sh, log file, remove print statements

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 credentials.json
 token.pickle
 src/mathsense_gcal_import/config.py
+log.txt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
