--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ google-api-python-client = "^2.65.0"
 google-auth-oauthlib = "^0.5.3"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
